Increased memory for tests (-Xms128m -Xmx256m -XX:MaxPermSize=192m)